--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <a-box position='0 0.5 0' color="blue"></a-box>
         </a-marker>
 
+         <a-marker type='barcode' value='2'>
+            <a-box position='0 0.5 0' color="blue"></a-box>
+             <a-text 
+            position="1 1 0"  
+            value="Especialidades" 
+            color="black" 
+            width="100"
+                    </a-text>
+             
+        </a-marker>
+            
         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
                 gltf-model="#animated-asset"
