--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     </head>
-    <script src="https://aframe.io/releases/0.9.1/aframe.min.js"></script>
-    <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     
     <!-- add this script in order to load a large set of 3D model extensions-->
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
@@ -22,8 +22,8 @@
         </a-marker>
 
          <a-marker type='barcode' value='2'>
-            <a-box position='-2 -2 0' color="blue"></a-box>
-
+            <a-box position='-0.75 0.5 0' color="blue"></a-box>
+             <a-text value="Now Interactable" geometry="primitive:plane"></a-text>
         </a-marker>
             
         <a-marker id="animated-marker" type='barcode' value='6'>
