--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
+            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/crizconzeta/ar-testing/main/fecha.glft.gltf"></a-asset-item>
         </a-assets>
 
          <a-marker type='barcode' value='2'>
@@ -29,7 +29,7 @@
             <a-entity
                 gltf-model='#animated-asset'
                 scale='2'
-                rotation='2 0 0'>
+                rotation='0 2 0'>
             </a-entity>
         </a-marker>
 
