--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <a-marker id='animated-marker' type='barcode' value='6'>
             <a-entity
                 gltf-model='#animated-asset'
-                scale='1'
+                scale='0.75'
                 rotation='0 2 0'
+                position='0.75 0.5 0'
                 color='blue'>
             </a-entity>
         </a-marker>
