--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+        <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/crizconzeta/ar-testing/main/fecha.glft.gltf"></a-asset-item>
@@ -28,7 +28,7 @@
         <a-marker id='animated-marker' type='barcode' value='6'>
             <a-entity
                 gltf-model='#animated-asset'
-                scale='0.5'
+                scale='1'
                 position='0.5 0 0'>
             </a-entity>
         </a-marker>
